--- a/front/package.json
+++ b/front/package.json
@@ -13,10 +13,12 @@
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "d3-force": "^3.0.0",
     "framer-motion": "^11.9.0",
     "postcss": "^8.4.47",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-force-graph": "^1.44.5",
     "react-scripts": "5.0.1",
     "recharts": "^2.12.7",
     "tailwindcss": "^3.4.13",
