--- a/front/package.json
+++ b/front/package.json
@@ -23,7 +23,8 @@
     "recharts": "^2.12.7",
     "tailwindcss": "^3.4.13",
     "three": "^0.169.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
